assets/css/index.scss
/* ... */
.vertical-align-top {
  vertical-align: top;
}

.list-item-spacer li {
  margin-bottom:15px;
}

.bg-blue-0 { background-color: #ffffff !important; text-align:center;}
.bg-blue-1 { background-color: #fcfdff !important; text-align:center;}
.bg-blue-2 { background-color: #f8fbff !important; text-align:center;}
.bg-blue-3 { background-color: #f4f8ff !important; text-align:center;}
.bg-blue-4 { background-color: #f0f6ff !important; text-align:center;}
.bg-blue-5 { background-color: #ecf3fe !important; text-align:center;}
.bg-blue-6 { background-color: #e9f1fe !important; text-align:center;}
.bg-blue-8 { background-color: #e1ecfe !important; text-align:center;}
.bg-blue-9 { background-color: #dde9fd !important; text-align:center;}
.bg-blue-12 { background-color: #d2e2fd !important; text-align:center;}
.bg-blue-21 { background-color: #afccfb !important; text-align:center;}
.bg-blue-23 { background-color: #a8c7fa !important; text-align:center;}
.bg-blue-25 { background-color: #a0c2fa !important; text-align:center;}
.bg-blue-27 { background-color: #98bdf9 !important; text-align:center;}
.bg-blue-37 { background-color: #72a4f7 !important; text-align:center;}
.bg-blue-39 { background-color: #6a9ff6 !important; text-align:center;}

.bg-aqua-2 { background-color: #E5EEF5 !important; text-align:center;}
.bg-aqua-3 { background-color: #D8E5F0 !important; text-align:center;}
.bg-aqua-4 { background-color: #D8E5F0 !important; text-align:center;}
.bg-aqua-5 { background-color: #D0E1ED !important; text-align:center;}
.bg-aqua-6 { background-color: #CCDDEC !important; text-align:center;}
.bg-aqua-7 { background-color: #CCDDEC !important; text-align:center;}
.bg-aqua-8 { background-color: #BFD5E8 !important; text-align:center;}
.bg-aqua-9 { background-color: #BFD5E8 !important; text-align:center;}
.bg-aqua-10 { background-color: #BFD5E8 !important; text-align:center;}
.bg-aqua-11 { background-color: #B8D1E5 !important; text-align:center;}
.bg-aqua-13 { background-color: #B2CEE3 !important; text-align:center;}
.bg-aqua-14 { background-color: #B2CEE3 !important; text-align:center;}
.bg-aqua-15 { background-color: #A6C6DE !important; text-align:center;}
.bg-aqua-16 { background-color: #A6C6DE !important; text-align:center;}
.bg-aqua-20 { background-color: #99BED9 !important; text-align:center;}
.bg-aqua-24 { background-color: #A0C3DC !important; text-align:center;}
.bg-aqua-34 { background-color: #659DC7 !important; text-align:center;}
.bg-aqua-36 { background-color: #659DC7 !important; text-align:center;}

/* FY25 Assessment Heatmap Colors */
.bg-blueish-0 {border: 1px solid black !important; background-color: #ffffff !important; text-align:center;}
.bg-blueish-1 {border: 1px solid black !important; background-color: #E5ECF5 !important; text-align:center;}
.bg-blueish-2 {border: 1px solid black !important; background-color: #CCDAED !important; text-align:center;}
.bg-blueish-3 {border: 1px solid black !important; background-color: #B3C8E2 !important; text-align:center;}
.bg-blueish-4 {border: 1px solid black !important; background-color: #9AB6D9 !important; text-align:center;}
.bg-blueish-5 {border: 1px solid black !important; background-color: #82A4D0 !important; text-align:center;}
.bg-blueish-7 {border: 1px solid black !important; background-color: #4779b5 !important; text-align:center; color:#fff;}

/* FY25 Assessment Heatmap #table7 */
.bg-t7-3 {border: 1px solid black !important; background-color: #fff !important; text-align:center;}
.bg-t7-7 {border: 1px solid black !important; background-color: #F1F5FB !important; text-align:center;}
.bg-t7-8 {border: 1px solid black !important; background-color: #F1F5FB !important; text-align:center;}
.bg-t7-10 {border: 1px solid black !important; background-color: #E4ECF5 !important; text-align:center;}
.bg-t7-12 {border: 1px solid black !important; background-color: #DFE7F2 !important; text-align:center;}
.bg-t7-13 {border: 1px solid black !important; background-color: #D8E2F0 !important; text-align:center;}
.bg-t7-17 {border: 1px solid black !important; background-color: #CAD9EC !important; text-align:center;}
.bg-t7-18 {border: 1px solid black !important; background-color: #C5D4E9 !important; text-align:center;}
.bg-t7-20 {border: 1px solid black !important; background-color: #BED0E7 !important; text-align:center;}
.bg-t7-22 {border: 1px solid black !important; background-color: #B7CBE5 !important; text-align:center;}
.bg-t7-23 {border: 1px solid black !important; background-color: #B0C6E1 !important; text-align:center;}
.bg-t7-30 {border: 1px solid black !important; background-color: #97B4D7 !important; text-align:center;}
.bg-t7-38 {border: 1px solid black !important; background-color: #779CCC !important; text-align:center;}
.bg-t7-42 {border: 1px solid black !important; background-color: #6A93C6 !important; text-align:center;}
.bg-t7-45 {border: 1px solid black !important; background-color: #5D8AC1 !important; text-align:center;}
.bg-t7-48 {border: 1px solid black !important; background-color: #4E80BC !important; text-align:center;}

/* FY25 Assessment Heatmap #table7 */
.bg-t8-0 {border: 1px solid black !important; background-color: #fff !important; text-align:center;}
.bg-t8-1 {border: 1px solid black !important; background-color: #Fff !important; text-align:center;}
.bg-t8-3 {border: 1px solid black !important; background-color: #F1F5FA !important; text-align:center;}
.bg-t8-4 {border: 1px solid black !important; background-color: #F1F5FA !important; text-align:center;}
.bg-t8-5 {border: 1px solid black !important; background-color: #EEF2F9 !important; text-align:center;}
.bg-t8-6 {border: 1px solid black !important; background-color: #E7EEF6 !important; text-align:center;}
.bg-t8-7 {border: 1px solid black !important; background-color: #E3EBF4 !important; text-align:center;}
.bg-t8-9 {border: 1px solid black !important; background-color: #DEE6F2 !important; text-align:center;}
/* ... */

